objects/DMAPP__Insight_Element_To_Category__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Category</label>
        <referenceTo>DMAPP__Insight_Category__c</referenceTo>
        <relationshipLabel>Insight Element To Categories</relationshipLabel>
        <relationshipName>Insight_Element_To_Categories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Insight_Smart_Node__c</fullName>
        <label>Smart Element</label>
        <referenceTo>DMAPP__Insight_Smart_Node__c</referenceTo>
        <relationshipLabel>Insight Element To Categories</relationshipLabel>
        <relationshipName>Insight_Element_To_Cats</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Subcategory__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Subcategory</label>
        <referenceTo>DMAPP__Insight_Subcategory__c</referenceTo>
        <relationshipLabel>Insight Element To Categories</relationshipLabel>
        <relationshipName>Insight_Element_To_Categories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Insight Element To Category</label>
    <nameField>
        <label>Insight Element To Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insight Element To Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DMAPP__Prevent_Field_Update</fullName>
        <active>true</active>
        <description>Prevents users updating the Field</description>
        <errorConditionFormula>ISCHANGED(DMAPP__DealmakerID__c)</errorConditionFormula>
        <errorMessage>The Dealmaker ID field cannot be updated after creation</errorMessage>
    </validationRules>
</CustomObject>